objects/ssot__EmploymentOffer__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AcceptanceDate__c</fullName>
        <label>Acceptance Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ApplicationId__c</fullName>
        <label>Application</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmployeeId__c</fullName>
        <label>Employee</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmploymentOfferStatus__c</fullName>
        <label>Employment Offer Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EmploymentOfferType__c</fullName>
        <label>Employment Offer Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedHireDate__c</fullName>
        <label>Expected Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExpectedStartDate__c</fullName>
        <label>Expected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__ExpirationDate__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Employment Offer Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__JobPositionId__c</fullName>
        <label>Job Position</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LocationId__c</fullName>
        <label>Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ManagerId__c</fullName>
        <label>Manager</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OfferCreatedDateTime__c</fullName>
        <label>Offer Created Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PayLevelId__c</fullName>
        <label>Pay Level</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PayOfferAmount__c</fullName>
        <label>Pay Offer Amount</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__RecipientId__c</fullName>
        <label>Recipient</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366621825_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmploymentOffer_ApplicationId_map_Ap_rel</label>
        <referenceTo>ssot__Application__dlm</referenceTo>
        <relationshipLabel>EmploymentOffer_ApplicationId_map_Ap_rel</relationshipLabel>
        <relationshipName>rel_1727366621825_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366623856_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmploymentOffer_ManagerId_map_Employ_rel</label>
        <referenceTo>ssot__Employee__dlm</referenceTo>
        <relationshipLabel>EmploymentOffer_ManagerId_map_Employ_rel</relationshipLabel>
        <relationshipName>rel_1727366623856_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1727366628478_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EmploymentOffer_EmployeeId_map_Emplo_rel</label>
        <referenceTo>ssot__Employee__dlm</referenceTo>
        <relationshipLabel>EmploymentOffer_EmployeeId_map_Emplo_rel</relationshipLabel>
        <relationshipName>rel_1727366628478_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>